--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    <nav class="navbar-nav navbar-light bg-light">
+    <nav class="navbar-nav navbar-light py-2 bg-black">
         <div class="container">
-            <a href="#" class="navbar-brand">This is Logo</a>
+            <a href="#" class="navbar-brand"><img src="img/logo.png" alt="Startup-logo" height="40px">
+            </a>
         </div>
     </nav>
     <header class="">
