added header title and sub title.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
 </head>
 
 <body>
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
     <nav class="bg-black fixed-top row">
         <div class="container navbar-nav navbar-light navbar-expand-lg py-2">
             <a href="#" class="navbar-brand"><img src="img/platypus-logo.png" alt="Startup-logo" height="45px"></a>
@@ -47,8 +43,10 @@
     </nav>
     <header class="">
         <div class="container">
-            <p>try to update</p>
-        </div>
+            <div class="header-style">
+            <h1 class="header-title">Be a Hero! Resucue a Platypus.</h1>
+            <h4 class="header-subtitle">"Because the platypus both lays eggs and produces milk, <br/> it's one of the few animals that can make it's own custard."</h4>
+        </div></div>
     </header>
     <section class="environment">
         <div class="container">
