--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <nav class="bg-black fixed-top">
-        <div class="container navbar-nav navbar-light navbar-expand-lg py-2 nav-flex">
+        <div class="container navbar-nav navbar-light navbar-expand-lg py-2 nav-flex nav-row">
             <a href="#" class="navbar-brand"><img src="img/platypus-logo.png" alt="Startup-logo" height="45px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
